fix: add gap between todo cards

--- a/src/components/todo-card/style.css
+++ b/src/components/todo-card/style.css
@@ -41,5 +41,6 @@
   .container:has(&) {
     display: flex;
     flex-wrap: wrap;
+    gap: 1rem;
   }
 }
